--- a/index.html
+++ b/index.html
@@ -7,14 +7,33 @@
     <title>CYBER DUNGEON - Home</title>
 </head>
 <body>
-    <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="play.html">Play</a>
-        <a href="about.html">About Us</a>
-    </div>
     <div class="content">
         <h1>CYBER DUNGEON</h1>
-        <p>Cyber Dungeon is an educational online game aimed at teaching young adults about the importance of online privacy and how to protect their personal information on the internet from data collection. The game is quiz-based and in the course of adventure, users will learn and understand the importance of network security step by step.The game will start out with the player trapped in a dungeon and they must defeat enemies in order to escape. In order to get past an enemy, the player can only get 3 questions wrong on a quiz. If they don't, then they will be sent back to the previous checkpoint. The quizzes will get progressively harder as they get closer to the exit. Once they escape the dungeon, the user should be well educated in the topic of data collection and how to protect themselves.</p>
+        <p>This is an educational video game focused on helping people learn about online privacy and how to protect 
+            their information. Throughout the course of this game you will learn more about scams, malware, social 
+            media and online shopping safety, data mining, and dark patterns. There are six levels and each level 
+            will focus on its own topic. These levels can be completed in any order, but in order to beat the game, 
+            you must complete every level. The game is called cyber dungeon because it's supposed to be an example of 
+            how you are trapped by companies taking your information, and once you win the game you will escape the 
+            dungeon since you now know how to better protect your information.</p>
+        <p> Linked below are the zipped files to play the game on either windows or mac OS. Within the game are the 
+            instructions on how to play the game. Have fun!</p>
+        
+        <p>Download to play on windows: </p>
+        <p>Download to play on mac OS:  </p>
+        
+        <H2>About Us</H2>
+        <p>This game was created by Mario Medina, Jinheng Hu, Jhoonho Kim as a capstone project. The topic of our 
+            capstone was privacy. What we wanted to do was create a way for people to learn about online privacy in a 
+            way that is also entertaining. We decided that creating an educational video game would be the best way to 
+            do this because who doesn't like video games. The reason why it is so important to keep people educated on 
+            this topic is because technology has become increasingly more ingrained in almost every aspect in life with 
+            the rise of surveillance capitalism. It has become more invasive as various aspects of our lives can be 
+            tracked, monitored, and collected for companies' own gain at the expense of our privacy. Companies make it 
+            harder and trickier for people to opt out of getting their information mined and profited upon. Many tend 
+            to not know what they are getting into when they agree to things online so it’s important to educate them 
+            so they can make an informed decision about whether or not they want to accept the next terms and agreement 
+            or accept cookies button they come across.</p>
     </div>
 </body>
 </html>
