--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
             will focus on its own topic. These levels can be completed in any order, but in order to beat the game, 
             you must complete every level. The game is called cyber dungeon because it's supposed to be an example of 
             how you are trapped by companies taking your information, and once you win the game you will escape the 
-            dungeon since you now know how to better protect your information.</p>
-        <p> Linked below are the zipped files to play the game on either windows or mac OS. Within the game are the 
-            instructions on how to play the game. Have fun!</p>
+            dungeon since you now know how to better protect your information. Linked below is the zipped files to 
+            play the game. Within the game are the instructions on how to play the game. Have fun!</p>
         
-        <p>Download to play on windows: </p>
-        <p>Download to play on mac OS:  </p>
+        <p>Download zipped files: </p>
         
         <H2>About Us</H2>
         <p>This game was created by Mario Medina, Jinheng Hu, Jhoonho Kim as a capstone project. The topic of our 
