--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             dungeon since you now know how to better protect your information. Linked below is the zipped files to 
             play the game. Within the game are the instructions on how to play the game. Have fun!</p>
         
-        <p>Download zipped files: </p>
+        <p>Download zipped files: <a href="CyberDungeon.zip">CyberDungeon.zip</a></p>
         
         <H2>About Us</H2>
         <p>This game was created by Mario Medina, Jinheng Hu, Jhoonho Kim as a capstone project. The topic of our 
