--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="content">
         <h1>CYBER DUNGEON</h1>
+        <H2>Overview</H2>
         <p>This is an educational video game focused on helping people learn about online privacy and how to protect 
             their information. Throughout the course of this game you will learn more about scams, malware, social 
             media and online shopping safety, data mining, and dark patterns. There are six levels and each level 
